--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ start-delay: 200	# Default 200
 delete-delay: 5000	# Default 5000
 lines:			# You can add HTML Tags in the Text
   - text: "I'll either find a way or make one myself."
-  - text: "Workign towards the moment I transform into a supersaiyan."
+  - text: "Working towards the moment I transform into a supersaiyan."
 
 ########
 # Blog #
@@ -84,7 +84,7 @@ career-img: "/img/career/default.png"
 # Contact layout #
 ##################
 
-email: "rohanchandra30@gmail.com"
+email: "rohanchandra30[at]gmail.com"
 
 ##################
 # Social Buttons #
@@ -119,7 +119,7 @@ social:
 pages_list:
   About: 'about'
   Research: 'blog'
-  Publications: 'career'
+  Publications: 'about'
   Contact: 'contact'
 
 # Pagination path
